[package]
name = "mhteams"
version = "0.1.0"
authors = ["Magnus Aa. Hirth <mhmorgan42@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://crates.io/crates/mhteams"
repository = "https://github.com/mhmorgan/mhteams"
readme = "README.md"
description = "Idiomatic building of MS Teams messages."
documentation = "https://docs.rs/mhteams/"

keywords = ["teams"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.10.6", features = ["blocking", "json"] }